feat: brush up stable diffusion
